--- a/wp-content/themes/casinochecking.com/scss/partials/_footer.scss
+++ b/wp-content/themes/casinochecking.com/scss/partials/_footer.scss
@@ -41,21 +41,5 @@ footer {
       font-size: 10px;
       text-transform: uppercase;
     }
-
-    .icon {
-      margin: 0 auto;
-      width: 25%;
-      padding-bottom: 6px;
-    }
-
-    .footer-section {
-      padding: 10px 0;
-      text-align: center;
-    }
-    .current-page {
-      .footer-text p {
-        color: $red;
-      }
-    }
   }
 }
